# Python-Image-Resizer

./: .gitignore  README.md  pyproject.toml
image_byte_resizer/: __init__.py  __main__.py  cli.py  errors.py  formats.py  naming.py  resizer.py  sizing.py
tests/: conftest.py  test_naming.py  test_resizer.py  test_sizing.py
