[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-byte-resizer"
version = "1.0.0"
description = "Reduce an image's file size in bytes without changing its dimensions or format."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Denali Cornwell" }]
keywords = ["image", "compression", "file-size", "jpeg", "png", "webp", "pillow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Environment :: Console",
]
dependencies = ["Pillow>=11.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
image-byte-resizer = "image_byte_resizer.cli:main"

[project.urls]
Homepage = "https://github.com/dcwell/Python-Image-Resizer"

[tool.setuptools]
packages = ["image_byte_resizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
